# python-emotiv

./: .gitignore  Anaconda Prompt (py2_emotiv_epoc).lnk  README.md  conda-environment.yml  pho-requirements.txt  pyproject.toml  requirements.txt
emotiv/: epoc.py  toMatlab.sh  utils.py
examples/: pho-multi-record.py  pho-server-record.py  record-data.py
lsl/: liblsl32.so.1.13.0  lsl-pyemotiv.py
