[tool.poetry]
name = "python-emotiv"
version = "0.1.0"
description = ""
authors = ["Pho Hale <PhoHale@gmail.com>"]
readme = "README.md"
packages = [{include = "python_emotiv"}]

[tool.poetry.dependencies]
python = "^2.7.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
